--- a/DEMO - Restaurante.Rmd
+++ b/DEMO - Restaurante.Rmd
@@ -1056,3 +1056,30 @@ layout_column_wrap(
 
 ```
 
+
+Row {data-height=12}
+-----------------------------------------------------------------------
+
+<div style="display:flex; justify-content:space-between; align-items:center;
+            width:100%; margin-top:4px; margin-bottom:4px;">
+
+  <!-- Izquierda -->
+  <p style="background:transparent; padding:4px; border-radius:6px;
+            font-size:10px; color:#003366; margin:0;">
+    Powered by 
+    <a href="https://insightdap.com/" target="_blank"
+       style="color:#003366; font-weight:bold; text-decoration:none;">
+      Insight Data Analytics Partners
+    </a>
+  </p>
+
+  <!-- Derecha -->
+  <p style="background:transparent; padding:4px; border-radius:6px;
+            font-size:10px; color:#003366; margin:0; text-align:right;">
+    <b>Última actualización:</b>
+    `r format(ultima_actualizacion, "%d-%m-%Y %H:%M")`
+  </p>
+
+</div>
+
+
