--- a/DEMO - Restaurante.Rmd
+++ b/DEMO - Restaurante.Rmd
@@ -58,6 +58,7 @@ try(gs4_auth(
 #Importación   --------------------------------------------------------
 data <- read_sheet("19rG6WCDC48dscewCJhI4At-3p5_14A09vxdJuNZM6ns")
 
+ultima_actualizacion <- Sys.time()
 
 #Clasificación de respuestas   ----------------------------------------
 # Asignación de niveles de demográficos
@@ -684,6 +685,32 @@ layout_column_wrap(
 )
 
 ```
+
+
+Row {data-height=12}
+-----------------------------------------------------------------------
+
+<div style="display:flex; justify-content:space-between; align-items:center;
+            width:100%; margin-top:4px; margin-bottom:4px;">
+
+  <!-- Izquierda -->
+  <p style="background:transparent; padding:4px; border-radius:6px;
+            font-size:10px; color:#003366; margin:0;">
+    Powered by 
+    <a href="https://insightdap.com/" target="_blank"
+       style="color:#003366; font-weight:bold; text-decoration:none;">
+      Insight Data Analytics Partners
+    </a>
+  </p>
+
+  <!-- Derecha -->
+  <p style="background:transparent; padding:4px; border-radius:6px;
+            font-size:10px; color:#003366; margin:0; text-align:right;">
+    <b>Última actualización:</b>
+    `r format(ultima_actualizacion, "%d-%m-%Y %H:%M")`
+  </p>
+
+</div>
 
 
 General {data-orientation=rows}
